feat: implement core backend microservices architecture including auth, leave, timesheet, admin, and notification services